--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,2 @@
-patreon: Biast12
-custom: "https://www.paypal.com/donate/?hosted_button_id=RWB2QFK7CKUM2"
-github: Biast12
+ko_fi: LittleLilyCat
+github: LilCatLily
