--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master2
+      - main
 
 jobs:
   nightly:
@@ -37,7 +37,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with:
-        upload_url: https://uploads.github.com/repos/biast12/h5ai/releases/174817631/assets{?name,label}
+        upload_url: https://uploads.github.com/repos/lilcatlily/h5ai/releases/174817631/assets{?name,label}
         release_id: 174817631
         asset_path: ./_h5ai.zip
         asset_name: _h5ai.zip
