--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,12 @@ name: Upload Release
 
 on:
   workflow_dispatch:
-  release:
-    types: [published]
+  push:
+    tags:
+      - '*'
 
 jobs:
-  nightly:
-
+  UpdateRelease:
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -24,29 +24,26 @@ jobs:
     - run: npm run build
 
     - name: ZIP Executable
-      if: steps.commitswithintime.outputs.has-new-commits-within-time != 'false'
       uses: vimtor/action-zip@v1
       with:
         files: build/_h5ai
         dest: _h5ai.zip
 
     - name: Upload Release Build
-      if: steps.commitswithintime.outputs.has-new-commits-within-time != 'false'
       uses: WebFreak001/deploy-nightly@v2.0.0
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with:
-        upload_url: https://uploads.github.com/repos/lilcatlily/h5ai/releases/174817631/assets{?name,label}
-        release_id: 174817631
+        upload_url: https://uploads.github.com/repos/lilcatlily/h5ai/releases/164326097/assets{?name,label}
+        release_id: 164326097
         asset_path: ./_h5ai.zip
         asset_name: _h5ai.zip
         asset_content_type: application/zip
         max_releases: 1
 
     - name: Update Release
-      if: steps.commitswithintime.outputs.has-new-commits-within-time != 'false'
       uses: richardsimko/update-tag@v1.0.5
       with:
-        tag_name: 'Release2'
+        tag_name: 'latest'
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
